// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card block saved block HTML shouldn't change 1`] = `
<div
  className="wp-block-ugb-card ugb-card ugb-card--design-design ugb--shadow-1 className"
  style={
    Object {
      "backgroundColor": "#123456",
      "borderRadius": 6,
    }
  }
>
  <div
    className="ugb-card__image-container"
    data-src="mediaURL"
    style={
      Object {
        "backgroundImage": "url(mediaURL)",
        "borderRadius": undefined,
        "textAlign": "contentAlign",
      }
    }
  />
  <h4
    className="ugb-card__title"
    style={
      Object {
        "color": "#123456",
        "textAlign": "contentAlign",
      }
    }
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "heading",
        }
      }
    />
  </h4>
  <p
    className="ugb-card__tagline"
    style={
      Object {
        "color": "#123456",
        "textAlign": "contentAlign",
      }
    }
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "tagline",
        }
      }
    />
  </p>
  <p
    className="ugb-card__description"
    style={
      Object {
        "color": "#123456",
        "textAlign": "contentAlign",
      }
    }
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "des",
        }
      }
    />
  </p>
  <div>
    <a
      className="ugb-button ugb-button--align-contentAlign ugb-button--size-size ugb-button--design-buttonDesign ugb-button--has-icon"
      href="buttonURL"
      style={
        Object {
          "backgroundColor": "#123456",
          "borderColor": undefined,
          "borderRadius": "2px",
          "color": "#123456",
        }
      }
      target="_blank"
    >
      <span
        className="ugb-button--inner"
        style={
          Object {
            "color": "#123456",
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "buttonText",
            }
          }
        />
      </span>
    </a>
  </div>
</div>
`;

exports[`Card block saved default block HTML shouldn't change 1`] = `
<div
  className="wp-block-ugb-card ugb-card ugb--shadow-3"
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderRadius": 12,
    }
  }
>
  <h4
    className="ugb-card__title"
    style={
      Object {
        "color": undefined,
        "textAlign": "left",
      }
    }
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "Title for This Block",
        }
      }
    />
  </h4>
  <p
    className="ugb-card__tagline"
    style={
      Object {
        "color": undefined,
        "textAlign": "left",
      }
    }
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "Subtitle for this block",
        }
      }
    />
  </p>
  <p
    className="ugb-card__description"
    style={
      Object {
        "color": undefined,
        "textAlign": "left",
      }
    }
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "Description for this block. Use this space for describing your block. Any text will do. Description for this block. You can use this space for describing your block. Description for this block. Use this space for describing your block. Any text will do. Description for this block. You can use this space for describing your block.",
        }
      }
    />
  </p>
  <div>
    <a
      className="ugb-button ugb-button--align-left ugb-button--size-normal"
      href=""
      style={
        Object {
          "backgroundColor": undefined,
          "borderColor": undefined,
          "borderRadius": "4px",
          "color": "#ffffff",
        }
      }
    >
      <span
        className="ugb-button--inner"
        style={
          Object {
            "color": "#ffffff",
          }
        }
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "Button text",
            }
          }
        />
      </span>
    </a>
  </div>
</div>
`;
